--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-/node_modules
+.DS_Store
+node_modules
+/dist
+.svn/
+
+# local env files
+#.gitignore
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.*proj
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
