--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "serve": "nodemon src/server.js",
+    "socket": "nodemon src/socket.js"
   },
-  "author": "",
+  "author": "linzhe",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,7 +19,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "ws": "^7.4.0"
   },
   "devDependencies": {
     "express-swagger-generator": "^1.1.17",
